--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,11 +59,11 @@ services:
     volumes:
       - clamav-data:/var/lib/clamav
     healthcheck:
-      test: ["CMD", "clamscan", "--ping"]
-      interval: 60s
-      timeout: 10s
-      retries: 3
-      start_period: 120s
+      test: ["CMD-SHELL", "nc -z clamav 3310 || exit 1"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 180s
     networks:
       - datapus-network
     restart: unless-stopped
