--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,12 +52,12 @@ services:
     restart: unless-stopped
 
   clamav:
-    image: clamav/clamav:1.2.0
+    image: clamav/clamav:1.3.0
     container_name: clamav
     ports:
       - "3310:3310"
     volumes:
-      - clamav-data:/var/lib/clamav
+      - ./clamav-data:/var/lib/clamav
     healthcheck:
       test: ["CMD-SHELL", "nc -z clamav 3310 || exit 1"]
       interval: 5s
@@ -67,10 +67,6 @@ services:
     networks:
       - datapus-network
     restart: unless-stopped
-
-volumes:
-  clamav-data:
-    driver: local
 
 networks:
   datapus-network:
